# tehnopark_c_cpp_hw2

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
dump/: Virus:Vibrance.txt  bohemian_rapsody.txt  headhunter.txt  test_file.txt
include/: dir_handler.h  file_handler.h  set.h
linters/: run.sh
source/: dir_handler.c  file_handler.c  main.c  set.c
tests/: CMakeLists.txt  test.cpp
